--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--Header-->
     <header class="text-center my-5"> 
         <h1 class="text-center font-title">Welcome to Air's Website!</h1>
-        <p class="lead">Starter website using Bootstrap & custom fonts</p>
+        <p class="lead">My first website, made for CSCE 3420 using Bootstrap, SCSS, & Google fonts [:</p>
     </header>
 
     <!--About-->
