--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css"/>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/custom.css"/>
 
 </head>
 
