Added about & project sections to site

--- a/index.html
+++ b/index.html
@@ -28,14 +28,35 @@
 <body>
     <!--Header-->
     <header class="text-center my-5"> 
-        <h1 class="text-center font-title">Welcome to Air's Website!</h1>
-        <p class="lead">My first website, made for CSCE 3420 using Bootstrap, SCSS, & Google fonts [:</p>
+        <h1 class="text-center font-title">Air Bergamini</h1>
+        <p class="lead">Welcome to my first website! Made for CSCE 3420 using Bootstrap & custom SCSS [:</p>
     </header>
 
     <!--About-->
-    <section class="container text-center">
-        <p>Hi! I'm a junior Computer Science student at the University of North Texas. I'm currently learning web design and game development,
-            and I'd like to use this website as a center for my personal projects moving forward.
+    <section class="about">
+        <h3>About</h3>
+        <p>Hi! I'm a Computer Science student (UNT '27) and an aspiring game developer. I started my journey in programming
+            later than most, leaving my progress towards a BFA in Studio Art & Art Education at 19 behind to take a gap semester and
+            ultimately decide to bridge the technical and the artistic in pursuit of my CS degree in 2023. Since then, I've
+            never been more sure that I'm exactly where I was meant to be all along. I plan on using this website
+            as a center for my projects, games, and such moving forward. Stay tuned as I learn, develop, and create
+            along my path towards becoming a full-time game developer post-grad!
+            <br>
+            Add me on <a href="https://www.linkedin.com/in/airbergamini/">LinkedIn</a> & be sure to follow my progress on <a href="https://github.com/arielbergamini">GitHub</a> too [:
+        </p>
+    </section>
+    <section class="projects">
+        <h3>Current Projects</h3>
+        <p> My current projects focus different types of games, ranging from educational to
+            gamified to classic arcade-style. I'll update this list as I progress!
+            <dl>
+                <dt>Versus Pong</dt>
+                <dd>A networked two-player pong for Windows systems. Check out my progress on GitHub!</dd>
+                <dt>Stackosaur</dt>
+                <dd>Two-player tower defense & Jenga mashup modeling cybersecurity and computer science concepts through play</dd>
+                <dt>Questify</dt>
+                <dd>Gamified project management software allowing groups to form Guilds and take on RPG-style quests</dd>
+            </dl>
         </p>
     </section>
 
