--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             never been more sure that I'm exactly where I was meant to be all along. I plan on using this website
             as a center for my projects, games, and such moving forward. Stay tuned as I learn, develop, and create
             along my path towards becoming a full-time game developer post-grad!
-            <br>
+            <br><br>
             Add me on <a href="https://www.linkedin.com/in/airbergamini/">LinkedIn</a> & be sure to follow my progress on <a href="https://github.com/arielbergamini">GitHub</a> too [:
         </p>
     </section>
@@ -50,12 +50,12 @@
         <p> My current projects focus different types of games, ranging from educational to
             gamified to classic arcade-style. I'll update this list as I progress!
             <dl>
-                <dt>Versus Pong</dt>
+                <dt><h5>Versus Pong</h5></dt>
                 <dd>A networked two-player pong for Windows systems. Check out my progress on GitHub!</dd>
-                <dt>Stackosaur</dt>
+                <dt><h5>Stackosaur</h5></dt>
                 <dd>Two-player tower defense & Jenga mashup modeling cybersecurity and computer science concepts through play</dd>
-                <dt>Questify</dt>
-                <dd>Gamified project management software allowing groups to form Guilds and take on RPG-style quests</dd>
+                <dt><h5>Questify</h5></dt>
+                <dd>Gamified project management software allowing groups to form Guilds and complete tasks through RPG-style quests</dd>
             </dl>
         </p>
     </section>
