--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--About-->
     <section class="about">
         <h3>About</h3>
-        <p><img src="kiddyuh.jpg" alt="Compsci kitty (my gf says this is me)" style="float:right;width:42px;height:42px;"> Hi! I'm a Computer Science student (UNT '27) and an aspiring game developer. I started my journey in programming
+        <p> Hi! I'm a Computer Science student (UNT '27) and an aspiring game developer. I started my journey in programming
             later than most, leaving my progress towards a BFA in Studio Art & Art Education at 19 behind to take a gap semester and
             ultimately decide to bridge the technical and the artistic in pursuit of my CS degree in 2023. Since then, I've
             never been more sure that I'm exactly where I was meant to be all along. I plan on using this website
@@ -56,9 +56,10 @@
                 <dd>Two-player tower defense & Jenga mashup modeling cybersecurity and computer science concepts through play</dd>
                 <dt><h5>Questify</h5></dt>
                 <dd>Gamified project management software allowing groups to form Guilds and complete tasks through RPG-style quests</dd>
-            </dl>
+            </dl><br><br>
         </p>
     </section>
+    <img src="kiddyuh.jpg" alt="Compsci kitty (my gf says this is me)" style="float:right;width:42px;height:42px;">
 
     <!--Bootstrap JS-->
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
