more image edits

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </dl><br><br>
         </p>
     </section>
-    <img src="assets/kiddyuh.jpg" alt="Compsci kitty (my gf says this is me)" style="float:right;width:42px;height:42px;">
+    <img src="assets/kiddyuh.jpg" class="bottom-image" alt="Compsci kitty (my gf says this is me)" style="max-width:300px;max-height:300px;">
 
     <!--Bootstrap JS-->
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
