--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 </head>
 
-
 <body>
     <!--Header-->
+    <div class="page-content">
     <header class="text-center my-5"> 
         <h1 class="text-center font-title">Air Bergamini</h1>
         <p class="lead">Welcome to my first website! Made for CSCE 3420 using Bootstrap & custom SCSS [:</p>
@@ -59,6 +59,7 @@
             </dl><br><br>
         </p>
     </section>
+    </div>
     <img src="assets/kiddyuh.jpg" class="bottom-image" alt="Compsci kitty (my gf says this is me)" style="max-width:300px;max-height:300px;">
 
     <!--Bootstrap JS-->
